<resources>
    <string name="app_name">OneUI Tuner</string>
    <string name="options">Options</string>
    <string name="tweaks">Tweaks</string>
    <string name="more">More</string>

    <string name="twitter">Twitter</string>
    <string name="github">GitHub</string>
    <string name="website">Website</string>
    <string name="patreon">Patreon</string>

    <string name="clock">Clock</string>
    <string name="qs">Quick Settings</string>
    <string name="misc">Miscellaneous</string>
    <string name="status_bar">Status Bar</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="qs_header">QS Header</string>
    <string name="qs_row_col">QS Row/Column</string>
    <string name="uninstall_all">Uninstall All Overlays</string>

    <string name="magisk_module_installed">Magisk Module Installed!</string>
    <string name="succeeded">Succeeded</string>
    <string name="back">Back</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="installation_failed">Installation Failed!</string>
    <string name="cancel">Cancel</string>
    <string name="rebooting">Rebooting…</string>
    <string name="reboot">Reboot</string>
    <string name="later">Later</string>

    <string name="header_count_portrait">Header Count (Portrait)</string>
    <string name="header_count_landscape">Header Count (Landscape)</string>
    <string name="old_recents">Old Recents Menu</string>
    <string name="nav_height">Navigation Bar Height</string>
    <string name="clock_format">Status Bar Clock Format</string>
    <string name="qs_date_format">QS Date Format (Reboot Required)</string>
    <string name="custom_clock_format_ref">Clock/Date Formatting Reference</string>
    <string name="left_system_icons">Left System Icons</string>
    <string name="hide_status_bar_carrier">Hide Carrier Name</string>
    <string name="custom_qs_date_format">Custom QS Date Format</string>
    <string name="status_bar_height">Status Bar Height</string>
    <string name="hide_qs_tile_background">Hide QS Tile Background</string>
    <string name="lock_screen_rotation">Allow Lock Screen Rotation</string>
    <string name="qs_row_count_portrait">QS Row Count (Portrait)</string>
    <string name="qs_row_count_landscape">QS Row Count (Landscape)</string>
    <string name="qs_col_count_portrait">QS Column Count (Portrait)</string>
    <string name="qs_col_count_landscape">QS Column Count (Landscape)</string>
    <string name="disable_5ge">Disable 5G E</string>
    <string name="disable_flashing_wifi">Disable Flashing WiFi Icon</string>
    <string name="status_bar_clock_type">Status Bar Clock Type</string>
    <string name="use_synergy">Use Synergy</string>
    <string name="desktop_freeform_max">Max Freeform Window Count (Desktop)</string>
    <string name="freeform_max">Max Freeform Window Count</string>
    <string name="clock_position">Clock Position</string>
    <string name="hide_panel_carrier">Hide Notification Panel Carrier Name</string>
    <string name="synergy_not_installed">Synergy not Installed!</string>
    <string name="uninstall_legacy_overlays">Uninstall Legacy Overlays</string>
    <string name="custom_nav_layout">Custom Navigation Bar Layout</string>

    <string name="old_recents_desc">Restores the old vertical Recents carousel. Reboot required.</string>
    <string name="left_system_icons_desc">Move the system icons, like the WiFi, signal, etc icons, to the left of the status bar.</string>
    <string name="hide_status_bar_carrier_desc">Hide the carrier label in the status bar on the lock screen and when unlocked. Reboot required.</string>
    <string name="disable_5ge_desc">Replaces the 5G E icon on AT&amp;T devices with the proper 4G LTE icon.</string>
    <string name="status_bar_clock_type_desc">Choose to replace the status bar clock with the AOSP style or a custom format. The AOSP clock will allow you to enable seconds using SystemUI Tuner. The custom format will allow you to use any format you want, but won\'t automatically change color.</string>
    <string name="synergy_not_installed_desc">It looks like Synergy isn\'t installed. Would you like to check it out?</string>
    <string name="installation_failed_desc">The overlay installation failed:\n\n%s</string>
    <string name="reboot_first_desc">A reboot is required to activate the overlay. Would you like to reboot now or later?</string>
    <string name="reboot_others_desc">It\'s strongly recommended that you reboot after applying new settings. Would you like to reboot now?</string>
    <string name="reboot_uninstall_desc">A reboot is required to complete the removal process. Would you like to reboot now?</string>
    <string name="reboot_first_again_desc">One more reboot is needed to activate the overlay. Tap this notification to reboot.</string>
    <string name="magisk_module_installed_desc">Please reboot to finish the installation.</string>
    <string name="hide_panel_carrier_desc">Hide the carrier name shown at the bottom of the notification panel.</string>
    <string name="use_synergy_desc">This needs to be enabled on ALL unrooted One UI 2.0 devices. It does not need to be enabled on rooted devices, or the Galaxy Note9/S9/S9+ running One UI 1.0.</string>
    <string name="uninstall_legacy_overlays_desc">OneUI Tuner was redesigned recently, changing the names of the overlays used. If you have a rooted device, or a Galaxy Note9/S9/S9+ on One UI 1.0, tap here to make sure the legacy overlays are removed.</string>
    <string name="custom_nav_layout_desc">Set your own layout for the navigation bar. Reorder and remove buttons, or even add extra ones.</string>

    <string name="qqs_hint">Set your QS grid to 5x3 if the header icons overlap at higher values.</string>
    <string name="qs_row_col_hint">Set your QS grid to 5x3 for these to take effect.</string>

    <string name="clock_format_default">Default</string>
    <string name="clock_format_custom">Custom</string>
    <string name="clock_format_aosp">AOSP</string>

    <string name="clock_position_left_name">Left</string>
    <string name="clock_position_middle_name">Middle</string>
    <string name="clock_position_right_name">Right</string>

    <string name="clock_type_default">default</string>
    <string name="clock_type_custom">custom</string>
    <string name="clock_type_aosp">aosp</string>

    <string name="clock_position_left">left</string>
    <string name="clock_position_middle">middle</string>
    <string name="clock_position_right">right</string>

    <string name="default_clock_type">@string/clock_type_default</string>

    <string name="adjust_nav_bar_size">Adjust Navigation Bar Size</string>
    <string name="adjust_status_bar_size">Adjust Status Bar Size</string>

    <string name="adjust_qs_header">Adjust QS Header</string>
    <string name="adjust_qs_grid">Adjust QS Grid</string>

    <string name="plugin_authors">Zachary Wander</string>
</resources>
