<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/tweaks">

        <Preference
            android:title="@string/clock"
            android:key="clock"
            android:icon="@drawable/ic_access_time_24dp"
            />

        <Preference
            android:title="@string/qs"
            android:key="qs"
            android:icon="@drawable/ic_toggle_switch"
            />

        <Preference
            android:title="@string/status_bar"
            android:key="status_bar"
            android:icon="@drawable/ic_signal"
            />

        <Preference
            android:title="@string/lock_screen"
            android:key="lock_screen"
            android:icon="@drawable/ic_lock_outline_24dp"
            />

        <Preference
            android:title="@string/misc"
            android:key="misc"
            android:icon="@drawable/ic_more_horiz_24dp"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/options">

        <SwitchPreference
            android:title="@string/use_synergy"
            android:summary="@string/use_synergy_desc"
            android:key="use_synergy"
            android:defaultValue="@bool/use_synergy_default"
            android:icon="@drawable/synergy_icon"
            android:disableDependentsState="true"
            />

        <Preference
            android:title="@string/uninstall_all"
            android:key="uninstall_all"
            android:icon="@drawable/ic_baseline_delete_24"
            android:dependency="use_synergy"
            />

        <Preference
            android:title="@string/uninstall_legacy_overlays"
            android:summary="@string/uninstall_legacy_overlays_desc"
            android:key="uninstall_legacy"
            android:icon="@drawable/ic_baseline_delete_24"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/more"
        android:key="category_more">

        <tk.zwander.oneuituner.util.LinkPreference
            android:title="@string/twitter"
            android:key="twitter"
            android:icon="@drawable/twitter"
            app:link="https://twitter.com/wander1236"
            />

        <tk.zwander.oneuituner.util.LinkPreference
            android:title="@string/github"
            android:key="github"
            android:icon="@drawable/github"
            app:link="https://github.com/zacharee"
            />

        <tk.zwander.oneuituner.util.LinkPreference
            android:title="@string/website"
            android:key="website"
            android:icon="@drawable/ic_baseline_web_24"
            app:link="https://zwander.dev"
            />

        <tk.zwander.oneuituner.util.LinkPreference
            android:title="@string/patreon"
            android:key="patreon"
            android:icon="@drawable/patreon"
            app:link="https://patreon.com/zacharywander"
            />

        <tk.zwander.patreonsupportersretrieval.ui.SupporterDialogPreference
            />

    </PreferenceCategory>

</PreferenceScreen>