<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        android:title="@string/old_recents"
        android:summary="@string/old_recents_desc"
        android:key="old_recents"
        android:defaultValue="@bool/old_recents_default"
        />

    <SwitchPreference
        android:title="@string/adjust_nav_bar_size"
        android:key="adjust_nav_height"
        android:defaultValue="false"
        />

    <tk.zwander.seekbarpreference.SeekBarPreference
        android:title="@string/nav_height"
        android:key="nav_height"
        android:defaultValue="@integer/nav_height_unscaled_default"
        android:dependency="adjust_nav_height"
        app:scale="0.1"
        app:units="dp"
        app:minValue="@integer/nav_height_min"
        app:maxValue="@integer/nav_height_max"
        />

    <SwitchPreference
        android:title="@string/adjust_status_bar_size"
        android:key="adjust_status_height"
        android:defaultValue="false"
        />

    <tk.zwander.seekbarpreference.SeekBarPreference
        android:title="@string/status_bar_height"
        android:key="status_bar_height"
        android:defaultValue="@integer/status_bar_height_unscaled_default"
        android:dependency="adjust_status_height"
        app:scale="0.1"
        app:units="dp"
        app:minValue="@integer/status_bar_height_min"
        app:maxValue="@integer/status_height_max"
        />

    <EditTextPreference
        android:title="@string/freeform_max"
        android:key="freeform_max"
        android:defaultValue="@integer/freeform_max_default"
        app:dialogLayout="@layout/number_edit_text"
        />

    <EditTextPreference
        android:title="@string/desktop_freeform_max"
        android:key="desktop_freeform_max"
        android:defaultValue="@integer/desktop_freeform_max_default"
        app:dialogLayout="@layout/number_edit_text"
        />

<!--    <EditTextPreference-->
<!--        android:title="@string/custom_nav_layout"-->
<!--        android:summary="@string/custom_nav_layout"-->
<!--        android:key="custom_nav_layout"-->
<!--        />-->

</PreferenceScreen>