<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="?actionBarSize">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true">

                <TextSwitcher
                    android:id="@+id/title_switcher"
                    android:layout_width="0dp"
                    android:layout_height="?actionBarSize"
                    android:layout_weight="1"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                        />

                </TextSwitcher>

                <ProgressBar
                    android:id="@+id/progress"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:indeterminate="true"
                    />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/title_border"
                />

            <fragment
                android:id="@+id/nav_host"
                android:name="androidx.navigation.fragment.NavHostFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:defaultNavHost="true"
                app:navGraph="@navigation/main_nav"
                />

        </LinearLayout>

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_bar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="bottom"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:navigationContentDescription="@string/back"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check_black_24dp"
            android:contentDescription="@string/apply_changes"
            app:backgroundTint="?colorAccent"
            app:fabSize="normal"
            app:useCompatPadding="true"
            app:layout_anchor="@id/bottom_bar"
            />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <FrameLayout
        android:id="@+id/progress_wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:elevation="24dp"
        android:background="@color/progress_background"
        tools:visibility="visible">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="8dp"
            android:textColor="?colorAccent"
            android:elevation="12dp"
            app:strokeColor="?colorAccent"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            />

    </FrameLayout>

</FrameLayout>